--- a/sass/include/special-price.scss
+++ b/sass/include/special-price.scss
@@ -2,7 +2,7 @@
 
 #special-price{
     .grid .grid-item{
-        margin-right: 1.2rem;
-        margin-top: 1rem;
+        padding-right: 1.2rem;
+        padding-top: 1rem;
     }
 }
