--- a/css/style.css
+++ b/css/style.css
@@ -113,8 +113,8 @@ body {
 
 /*   Special Price Section Template */
 #special-price .grid .grid-item {
-  padding-right: 1.2rem;
-  padding-top: 1rem;
+  margin-right: 1.2rem;
+  margin-top: 1rem;
 }
 
 .blinking {
