--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ body {
     color: #f3f3f3;
   }
 }
-.form-control {
+#form-control-2 {
   margin-top: 0px;
   margin-left: 30px;
   border: 1px solid #ad0a0a !important;
@@ -149,7 +149,7 @@ body {
   box-shadow: none !important;
 }
 
-.input-group-text {
+#input-group-text-2 {
   background: #ad0a0a !important;
   border: 1px solid #ad0a0a !important;
   margin: 0px 10px 3px 0 !important;
@@ -166,6 +166,11 @@ body {
 
 .fa-search {
   color: #fff;
+}
+
+#login {
+  margin: 20px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
