--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,7 +11,7 @@
 
 
 
-.form-control {
+#form-control-2 {
     margin-top: 0px;
     margin-left: 30px;
     border: 1px solid #ad0a0a !important;
@@ -21,7 +21,7 @@
     border-bottom-right-radius: 0 !important;
     box-shadow: none !important;
   }
-  .input-group-text {
+#input-group-text-2 {
     background: #ad0a0a !important;
     border: 1px solid #ad0a0a !important;
     margin: 0px 10px 3px 0 !important;
@@ -38,6 +38,11 @@
   .fa-search {
     color: #fff;
   }
+
+  #login{
+    margin: 20px;
+    text-align: center;
+}
 
 
 
